--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
     "next-sanity": "^5.1.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "sanity": "^3.14.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
