--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
+    "react-responsive-carousel": "^3.2.23",
     "sanity": "^3.14.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
