--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "framer-motion": "^10.15.1",
     "next": "13.4.9",
     "next-sanity": "^5.1.1",
     "next-themes": "^0.2.1",
