--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.1",
     "@types/node": "20.4.1",
@@ -27,6 +28,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3",
     "sanity": "^3.14.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
