--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
+    "eslint-config-next": "^13.5.2",
     "framer-motion": "^10.15.1",
-    "next": "13.4.9",
+    "next": "^13.5.2",
     "next-sanity": "^5.1.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-responsive-carousel": "^3.2.23",
